# iot-hub-services

./: .db.env.example  .gitignore  README.md  Vagrantfile  build-arm.sh  build.sh  docker-compose-prod.yml  docker-compose.yml  start.sh  traefik_users.example
.github/workflows/: iot-auth-server.yml
actix-test/: Cargo.toml  Dockerfile  Dockerfile.prod
actix-test/src/: main.rs
actix-test/src/services/: mod.rs  s3_service.rs  user.rs
iot-api-plants/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.prod  Rocket.toml
iot-api-plants/src/: main.rs
iot-api-plants/src/models/: mod.rs  plant_data.rs
iot-api-plants/src/structures/: plant_data.rs  plant_data_collector.rs
iot-auth-server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.prod  Rocket.toml
iot-auth-server/src/: main.rs
iot-auth-server/src/auth/: mod.rs
iot-auth-server/src/jwt/: mod.rs
iot-auth-server/src/lib/: mongo.rs
iot-auth-server/src/models/: mod.rs  user.rs
iot-auth-server/src/structures/: api.rs  mod.rs  user.rs
iot-mqtt-hub/: Dockerfile  main.py
nginx/templates/: default.conf.template  prod.nginx.conf
