[package]
name = "actix-test"
version = "0.1.0"
authors = ["Douglass Hooker <DouglassHooker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main actix deps
actix-web = "3"
actix-multipart = "0.3.0"

# For matching on forms
mime = "0.3"

# futures for traits mostly
futures = "0.3.5"

# S3 storage utils
rust-s3 = {version = "0.23.0", features = ["no-verify-ssl"]}
aws-creds = "0.23.4"
aws-region = "0.21.0"


# NOTE FOR TOMORROW
# https://github.com/rusoto/rusoto/blob/master/integration_tests/tests/s3.rs

# AWS-like stuff
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"

# General utils
serde = "1.0.116"
serde_json = "1.0.57"