[package]
authors = ["Douglass Hooker <DouglassHooker@gmail.com>"]
edition = "2018"
name = "iot-auth"
version = "0.1.0"
[dependencies]
jsonwebtoken = "7"
rocket = "0.4.5"
serde_json = "*"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"
btoken = "7"
serde = {version = "1.0", features = ["derive"] }