[package]
authors = ["Douglass Hooker <DouglassHooker@gmail.com>"]
edition = "2018"
name = "iot-auth"
version = "0.1.0"
[dependencies]
jsonwebtoken = "7"
rocket = "0.4.5"
rocket_contrib = "*"
serde_json = "*"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
btoken = "7"
features = ["derive"]
version = "1.0"

[dependencies.serde.serde]
features = ["derive"]
version = "1.0"
